--- a/colours_project/templates/base.html
+++ b/colours_project/templates/base.html
@@ -14,11 +14,13 @@
         <nav class="white" role="navigation">
             <div class="nav-wrapper container">
                 <a href="#" class="brand-logo grey-text">Colours</a>
-                    <ul class="hide-on-med-and-down right">               
+                    <ul class="hide-on-med-and-down right">
+                            <li><a href="badges.html" class="grey-text">Colours</a></li>               
                         <li><a href="badges.html" class="grey-text">Themes</a></li>
                         <li><a href="sass.html" class="white-text waves-effect grey waves-light btn">Sign in</a></li>
                     </ul>
                     <ul id="nav-mobile" class="sidenav">
+                        <li><a href="badges.html" class="grey-text">Colours</a></li>
                         <li><a href="sass.html" class="grey-text">Themes</a></li>
                         <li><a href="sass.html" class="white-text waves-effect grey waves-light btn">Sign in</a></li>
                     </ul>
