--- a/colours_project/templates/colours/index.html
+++ b/colours_project/templates/colours/index.html
@@ -1,3 +1,3 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
-{% block body_block %}colours{% endblock %}
+{% block body_block %}{% endblock %}
