--- a/colours_project/templates/colours/index.html
+++ b/colours_project/templates/colours/index.html
@@ -1,3 +1,35 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
-{% block body_block %}{% endblock %}
+{% block body_block %}
+<div class="row">
+    <h1 class="grey-text center">Colours</h1>
+</div>
+{% if colour_palettes %}
+    <div class="row">
+        {% for palette in colour_palettes %}
+            <div class="col s12 m6">
+                <h2 class="header grey-text">{{ palette.name }}</h2>
+                <div class="card horizontal">
+                    <div class="card-image {{ palette.colours.first|lower }}">
+                        {% for n in "01234567890123" %}
+                            &nbsp;
+                        {% endfor %}
+                    </div>
+                    <div class="card-stacked">
+                        <div class="card-content">
+                            <p></p>
+                        </div>
+                        <div class="card-action">
+                            <a href="#">View all {{ palette.name|lower }} colours</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+{% else %}
+    <div>
+        <h3 class="grey-text center">No colours available.</h3>
+    </div>
+{% endif %}
+{% endblock %}
