--- a/colours_project/templates/colours/index.html
+++ b/colours_project/templates/colours/index.html
@@ -2,7 +2,6 @@
 {% load staticfiles %}
 {% block body_block %}
 <div class="row">
-    <h1 class="grey-text center">Colours</h1>
 </div>
 {% if colour_palettes %}
     <div class="row">
@@ -20,7 +19,7 @@
                             <p></p>
                         </div>
                         <div class="card-action">
-                            <a href="#">View all {{ palette.name|lower }} colours</a>
+                            <a href="{{ palette.get_absolute_url }}">View all {{ palette.name|lower }} colours</a>
                         </div>
                     </div>
                 </div>
