--- a/colours_project/templates/base.html
+++ b/colours_project/templates/base.html
@@ -14,12 +14,12 @@
         <nav class="white" role="navigation">
             <div class="nav-wrapper container">
                 <a href="{% url 'colours:index' %}" class="brand-logo grey-text">Colours</a>
-                    <ul class="hide-on-med-and-down right">               
-                        <li><a href="badges.html" class="grey-text">Palettes</a></li>
+                    <ul class="hide-on-med-and-down right">
+                        <li><a href="{% url 'colours:palette_list' %}" class="grey-text">Palettes</a></li>
                         <li><a href="sass.html" class="white-text waves-effect grey waves-light btn">Sign in</a></li>
                     </ul>
                     <ul id="nav-mobile" class="sidenav">
-                        <li><a href="sass.html" class="grey-text">Palettes</a></li>
+                        <li><a href="{% url 'colours:palette_list' %}" class="grey-text">Palettes</a></li>
                         <li><a href="sass.html" class="white-text waves-effect grey waves-light btn">Sign in</a></li>
                     </ul>
                 <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons grey-text">menu</i></a>
