--- a/colours_project/templates/colours/palette_list.html
+++ b/colours_project/templates/colours/palette_list.html
@@ -22,17 +22,23 @@
         </div>
         {% if is_paginated %}
             <div class="pagination">
-                <span class="page-links">
-                    {% if page_obj.has_previous %}
-                        <a href="{% url 'colours:palette_list' %}?page={{ page_obj.previous_page_number }}">previous</a>
+                {% if page_obj.has_previous %}
+                    <li class="waves-effect"><a href="{% url 'colours:palette_list' %}?page={{ page_obj.previous_page_number }}"><i class="material-icons">chevron_left</i></a></li>
+                {% else %}
+                    <li class="disabled"><a href="{% url 'colours:palette_list' %}?page={{ page_obj.number }}"><i class="material-icons">chevron_left</i></a></li>
+                {% endif %}
+                {% for i in "x"|ljust:page_obj.paginator.num_pages %}
+                    {% if forloop.counter == page_obj.number %}
+                        <li class="active grey"><a href="{% url 'colours:palette_list' %}?page={{ forloop.counter }}">{{ forloop.counter }}</a></li>
+                    {% else %}
+                        <li class="waves-effect"><a href="{% url 'colours:palette_list' %}?page={{ forloop.counter }}">{{ forloop.counter }}</a></li>
                     {% endif %}
-                    <span class="">
-                        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
-                    </span>
-                    {% if page_obj.has_next %}
-                        <a href="{% url 'colours:palette_list' %}?page={{ page_obj.next_page_number }}">next</a>
-                    {% endif %}
-                </span>
+                {% endfor %}
+                {% if page_obj.has_next %}
+                    <li class="waves-effect"><a href="{% url 'colours:palette_list' %}?page={{ page_obj.next_page_number }}"><i class="material-icons">chevron_right</i></a></li>
+                {% else %}
+                    <li class="disabled"><a href="{% url 'colours:palette_list' %}?page={{ page_obj.number }}"><i class="material-icons">chevron_right</i></a></li>
+                {% endif %}
             </div>
         {% endif %}
     {% else %}
